--- a/resources/ruby/ruby_route.yaml
+++ b/resources/ruby/ruby_route.yaml
@@ -3,19 +3,12 @@ kind: Route
 metadata:
   labels:
     app: ruby-app
-    app.kubernetes.io/component: ruby-app
-    app.kubernetes.io/instance: ruby-app
-    app.kubernetes.io/name: ruby-app
-    app.kubernetes.io/part-of: ruby-app
   name: ruby-app
 spec:
   port:
-    targetPort: 8080-tcp
+    targetPort: 8080
   tls:
     insecureEdgeTerminationPolicy: Redirect
     termination: edge
   to:
-    kind: Service
     name: ruby-app
-    weight: 100
-  wildcardPolicy: None
