--- a/apps/ruby-hello-world/application.yaml
+++ b/apps/ruby-hello-world/application.yaml
@@ -3,6 +3,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
   name: ruby-app-latest
+  namespace: pardini03
 spec:
   type: GitHub
   pathname: https://github.com/pluizetto/redhat-acm-app 
@@ -11,6 +12,7 @@ apiVersion: app.k8s.io/v1beta1
 kind: Application
 metadata:
   name: ruby-app
+  namespace: pardini03
 spec:
   componentKinds:
   - group: apps.open-cluster-management.io
@@ -27,6 +29,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
   name: ruby-app
+  namespace: pardini03
   labels:
     app: ruby-app
   annotations:
