production route for all managed clusters

--- a/resources/ruby/static-route.yaml
+++ b/resources/ruby/static-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   labels:
     app: ruby-app
-  name: ruby-app
+  name: prd-route
 spec:
   host: production-route.example.com
   port:
