--- a/apps/ruby-hello-world/application.yaml
+++ b/apps/ruby-hello-world/application.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
-  name: ruby-app-latest
+  name: ruby-app
   namespace: pardini03
 spec:
   type: GitHub
