--- a/apps/ruby-hello-world/prd-placement-rule.yaml
+++ b/apps/ruby-hello-world/prd-placement-rule.yaml
@@ -1,7 +1,8 @@
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  name: prd-clusters 
+  name: prd-clusters
+  namespace: pardini04
 spec:
   clusterConditions:
     - type: ManagedClusterConditionAvailable
